# ausolveris

./: CHANGELOG.md  LICENSE  README-HOWTO.md  README.md
ai-project-os/: API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  DEVELOPER_GUIDE.md  DOC_POLICY.md  HANDOVER_PROTOCOL.md  INTERFACE_CONTRACTS.md  MERGE_GATE_CHECKLIST.md  MODEL_ROUTING_POLICY.md  MODULE_OWNERSHIP.md  PHASE_PLAN.md  PHASE_PLAN_TEMPLATE.md  PHYSICS_FOUNDATIONS.md  PLANNING_AND_EXECUTION_MODEL.md  REPORT_TEMPLATE.md  ROLE_MODEL.md  STATUS.md  SYSTEM_MAP.md  TASK_GRANULARITY_RULES.md  TEST_STRATEGY.md  USER_GUIDE.md  YAML_SCHEMA.md  pyproject.toml
ai-project-os/architecture-exploration/: ARCHITECTURE_DECISION_SPACE.md  ARCHITECTURE_EXPLORATION.md  DISCOVERY_REVIEW.md  FOUNDATIONS_AND_DEPENDENCIES.md
ai-project-os/discovery/: BENCHMARK_CATALOG.md  CONOPS.md  FEASIBILITY_STUDY.md  MISSION.md  NUMERICAL_CONVENTIONS.md  RESEARCH_SPIKES.md  RISKS_AND_UNKNOWNS.md  V1_SCOPE.md
ai-project-os/docs/adr/: ADR-001.md  ADR-002  ADR-002.md  ADR-003  ADR-003.md  ADR-004  ADR-004.md  README.md
ai-project-os/templates/: ADR_TEMPLATE.md  AGENT_PROMPT_PACK.md  STATUS_SNAPSHOT_TEMPLATE.md  TASK_PACKET_TEMPLATE.md
examples/: geometry_viewer.py
repo-docs-pack/: README.md
tests/geometry/: test_acoustic_benchmark_harness.py  test_acoustic_operator_stub.py  test_acoustic_topology_consumption.py  test_acoustic_view.py  test_analysis.py  test_analytical_reference_evaluator.py  test_bem_benchmark_registration.py  test_bem_plan001_docs.py  test_boundary_rhs_assembly.py  test_driver_coupling_stub.py  (+32 more)
(+124 files in other folders)
